# multiarmed-bandits

./: .clang-format  .gitignore  .projectile  .run.py  .rungreedy.sh  .runucb.sh  CMakeLists.txt  README.org  launch-backend.sh  launch-frontend.sh  policy.h  rsync-push.sh  run-backend.sh  run-build.sh  run-frontend.sh  run.sh  runtests.sh
.notes/: chartjs.org  d3notes.org  main.py  noiseGeneration.html  noiseGeneration.md  noiseGeneration.org  noiseGeneration.tex  questions.html  questions.org  typescript.org  vuejs.org
.notes/.auctex-auto/: noiseGeneration.el
.scraps/: .eslintrc.js  serversync.cpp  websocketserv.h
.scraps/TODO/: .run.py  .rungreedy.sh  .runucb.sh  agent.h  policies.h  policy.h
.scraps/app/: package.json  tsconfig.app.json
.scraps/app/src/: App.vue  axiosSamples.ts
.scraps/app/src/components/: MultiArmedBandit.vue  ViolinChart.vue  arm.ts  yBins.ts
.scraps/app/src/models/: mab.ts
.scraps/app/src/policy/: epsilonGreedy.ts  ucb.ts
.scraps/multiarmed_bandits/: CMakeLists.txt  test_ucb.cpp
.scraps/web/backend/: package.json
.scraps/web/backend/server/: app.js
.scraps/web/frontend/: .eslintrc.cjs  package.json  tricks.yaml  tsconfig.json
.scraps/web/frontend/public/: models.json  policies.json  queryOptions.json
.scraps/web/frontend/src/: App.vue  main.ts
TODO/: .run.py  .runucb.sh  .sources.json
app/: package.json
app/src/: App.vue  axiosSamples.ts
app/src/components/: FileList.vue  MABManual.vue  MABView.vue  MetricsChart.vue  MultiArmedBandit.vue  OptionSelector.vue  ViolinChart.vue  arm.ts  randomNormal.ts  yBins.ts
app/src/js/: agents.js  environments.js  utils.ts
backend/: CMakeLists.txt  data.hpp  data_models.hpp  data_models.spec.json  helpers.hpp  nl_handler.cpp  nl_handler.h  nl_main.cpp  process_request.cpp  process_request.hpp  serialized.h  server.cpp  server.hpp
backend/__tests__/: CMakeLists.txt  tests_mockclient.cpp
backend/include/: zhelpers.hpp
backend/tests/: CMakeLists.txt
backend/tests/boost_describe/: CMakeLists.txt  boost_describe_enumtostring.cpp  boost_describe_equality.cpp  boost_describe_fromjson.cpp  boost_describe_jsonrpc.cpp  boost_describe_stringtoenum.cpp  boost_describe_tojson.cpp
backend/tests/jsonrpc/: CMakeLists.txt  json_call.hpp  json_recv.hpp  json_validate.hpp  msg_serialize_nl.hpp  tests.cpp  tests_boost_describe.cpp
backend/tests/reqrep/: CMakeLists.txt  client.cpp  context.h  helpers.hpp  rrbroker.cpp  rrbroker_msgqueue.cpp  rrclient.cpp  rrworker.cpp  server.cpp
backend/tests/scraps/: ex_async_ping.cpp
cmake/: boostbeast.cmake
cmdlineutils/: config.cfg
environments/: CMakeLists.txt  test_tictactoe.cpp  tictactoe.cpp  tictactoe.h
environments/multiarmed_bandits/: .clang-format  CMakeLists.txt  multiarmed_bandits.cpp  multiarmed_bandits.h
environments/tictactoe/: CMakeLists.txt  tictactoe.h
frontend/: package.json  tailwind.config.cjs
frontend/src/: App.vue  main.ts
frontend/src/components/: InputForm.vue
frontend/src/components/InputForm/: ModelSelection.vue  Parameters.vue  ParametersSelection.vue  PolicySelection.vue
frontend/src/composables/: useModels.ts
frontend/src/router/: index.ts
frontend/src/views/: HelpView.vue  HomeView.vue
mab-vue-app/: .eslintrc.cjs  .yarnrc  package.json  tailwind.config.cjs  tsconfig-base.json  tsconfig.json  tsconfig.node.json  vite.config.ts
mab-vue-app/src/: App.vue  style.css  tsconfig.json  vite-env.d.ts
mab-vue-app/src/components/: MABInteractive.vue  MovingAverageChart.vue  MultiArmedBandit.vue  tsconfig.json
mab-vue-app/src/prob_dist/: normal_dist.ts  prob-dist.ts  tsconfig.json
mab-vue-app/src/scripts/: d3-utils.ts  multi-armed-bandit.ts  prob-dist.ts  probability.ts  randomutils.ts  tsconfig.json  utils.ts
mab-vue-app/src/scripts/prob_dist/: domain.ts  normal_dist.ts  uniform_dist.ts
mab-vue-app/src/test/: CMakeLists.txt  test.C  test.H  tsconfig.json
multiarmed_bandits/: CMakeLists.txt  agent.h  agent_greedy.cpp  agent_greedy.h  cmdline_helper.h  jsonlog.cpp  jsonlog.h  multiarmed_bandits.cpp  multiarmed_bandits.h  plot.py  plot_ucb.py  po_helper.cpp  po_helper.h  statistics.h  test_epsilon_greedy.cpp  test_ucb.cpp  test_ucb_po.cpp
multiarmed_bandits/policies/: policy_greedy.h  policy_random.h  policy_ucb.h
notes/: noiseGeneration.org
policies/: agent.h  agent_logger.h  epsilon_greedy.h  extactions.h  helpers.h  policy_greedy.h  policy_helpers.h  policy_ucb.h  random.h  ucb.h
qlearning/: CMakeLists.txt  qlearn_tictactoe.cpp
serverbackend/: boost_serializer_helper.h  data_models.spec.json  json_body.hpp  main.cpp  main.cpp~  request_handler.cpp  request_handler.h
serverbackend/.scraps/: request_handler.h  request_handler_simple.h
site/: .gitignore  package.json
site/src/: main.ts
site/src/data/: types.ts
site/src/scripts/: rollingAverage.ts
site/src/store/: form.store.ts
src/: CMakeLists.txt
src/aiviz/: CMakeLists.txt
src/aiviz/backend/: asyncmain.cpp  main.cpp  messageQueue.h  request_handler.cpp  request_handler.h
src/aiviz/cmake/: Catch2.cmake
src/aiviz/environments/: CMakeLists.txt  actions.h
src/aiviz/frontend/: .eslintrc.json  package.json  tsconfig.json
src/aiviz/policies/: agent.h  epsilon_greedy.h  extactions.h  helpers.h  loss.h  ucb.h
src/backend/: CMakeLists.txt  request_handler.cpp
src/backend/.scraps/: client_example.cpp  request_handler.cpp  serialized.h  server.cpp  websocketserv.cpp  websocketserv_docs.cpp
src/environments/multiarmed_bandits/: multiarmed_bandits.h
src/environments/tictactoe/: test_tictactoe.cpp
src/frontend/: .projectile  tsconfig.json  vite.config.ts
src/frontend/src/: App.vue
src/multiarmed_bandits/: test_epsilon_greedy.cpp
src/policies/: CMakeLists.txt  epsilon_greedy.h  extactions.h  policies.h
src/python/: plot.py  plot_ucb.py
web/backend/: package.json
web/backend/scripts/: items.js
web/backend/server/: app.js
web/frontend/: index.html  nodemon.json  package.json  tailwind.config.cjs  tsconfig.json
web/frontend/scripts/: vuetsc.py
web/frontend/src/: App.vue  main.ts  types.ts
(+88 files in other folders)
